# moon

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  BENCHMARK-PRODUCTION.md  BENCHMARK-RESOURCES.md  BENCHMARK-v2.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PERFORMANCE-AUDIT.md  PROFILING-REPORT.md  README.md  RELEASES.md  SECURITY.md  UNSAFE_POLICY.md  bench-final.sh  bench-v2.sh  bench.sh  build.rs  deny.toml  docker-compose.yml  install.ps1  install.sh  mkdocs.yml  profile.sh  push.sh  requirements-docs.txt
.add/: CONVENTIONS.md  GLOSSARY.md  MODEL_REGISTRY.md  PROJECT.md  SETUP-REVIEW.md  dependencies.allowlist  state.json
.add/docs/: 00-introduction.md  01-principles.md  02-the-flow.md  03-step-1-specify.md  04-step-2-scenarios.md  05-step-3-contract.md  06-step-4-tests.md  07-step-5-build.md  08-step-6-verify.md  09-the-loop.md  10-setup-and-stages.md  11-governance.md  12-roles.md  (+12 more)
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.planning/: MILESTONES.md  OPTIMIZATION-ANALYSIS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SECURITY-IMPLEMENTATION-PLAN.md  STATE.md  architect-blue-print.md  architect-blue-print_v2.md  architect_vector_search_blueprint.md  paper-report.md  security_implement_blueprint.md
benches/: bptree_memory.rs  compact_key.rs  dispatch_baseline.rs  distance_bench.rs  entry_memory.rs  fwht_bench.rs  get_hotpath.rs  graph_bench.rs  graph_traversal.rs  hnsw_bench.rs  pubsub_hotpath.rs  resp_parsing.rs  simd_probe.rs
console/: .gitignore  .npmrc  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.test.json  vite.config.ts  vitest.config.ts
docs/: API-CONTRACT.md  HEXAGONAL-HNSW-STATUS.md  OPERATOR-GUIDE.md  PRODUCTION-CONTRACT.md  STORAGE-FORMAT-V1.md  THREAT-MODEL.md  W2-M2-FT-INVALIDATE-RANGE-SUMMARY.md  architecture.md  architecture.mdx  benchmark-report.md  benchmarks.md  benchmarks.mdx  changelog.md  commands.md  commands.mdx  comparison-valkey.md  configuration.md  configuration.mdx  contributing.md  design-advantages.md  docs.json  index.md  index.mdx  log-schema.md  production-guide.md  quickstart.md  quickstart.mdx  redis-compat.md  references.md  references.mdx  security.md  unsafe-policy.md  vector-search-guide.md  versioning.md
examples/: moon_memory_engine.py  real_rag_100docs.py
fuzz/: Cargo.toml
fuzz/artifacts/resp_parse/: crash-bc6d3eb6b9193b3f9f7844b01d2356dff5b38ee5  crash-d910d9fd212b15baaaea4eefbe68be05fb2dc3d9  crash-ef57cf8827ceb235423cc48cfa3845d2c94cf9cc
fuzz/corpus/inline_parse/: inline_get  inline_set
fuzz/corpus/resp_parse/: bulk  integer  nested  resp3_map
fuzz/fuzz_targets/: acl_rule.rs  conf_parse.rs  csr_from_bytes.rs  cypher_parse.rs  fts_query_parse.rs  gossip_deser.rs  inline_parse.rs  rdb_load.rs  resp_parse.rs  resp_parse_differential.rs  wal_v3_record.rs
moon-vs-turbovec/: METHODOLOGY.md  README.md
overrides/: main.html
packaging/: bump-homebrew.sh  moon.conf.example  moon.service  nfpm.yml
scripts/: README.md  audit-unsafe.sh  audit-unwrap.sh  baseline-xshard-quiesced.sh  bench-all-commands.sh  bench-allocator-ab.sh  bench-clean.sh  bench-cold-tier.sh  bench-compare-all.sh  bench-compare.sh  bench-cross-shard-fastpath.sh  bench-final-3tier.sh  bench-final.sh  bench-full.sh  bench-graph-compare.sh  bench-graph-vs-falkor.sh  bench-graph.sh  bench-hash-ttl-3way.sh  bench-hash-ttl.sh  bench-hdr-24h.sh  bench-live.sh  bench-memory-steady-state.sh  bench-memory.sh  bench-minilm-recall.py  bench-mixed-1k-compact.py  bench-mixed-workload.py  bench-moonstore-v2-generate.py  bench-moonstore-v2-kv.py  bench-moonstore-v2-recovery.py  bench-moonstore-v2-report.py  bench-moonstore-v2-vector.py  bench-moonstore-v2-warm.py  bench-moonstore-v2.sh  bench-moonstore.py  bench-no-persist.sh  bench-phase101-commands.sh  bench-phase101-seed.py  bench-pr100-multishard.sh  bench-pr100.sh  bench-production.sh  (+68 more)
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: README.md  __init__.py  pilotspace_example.py  validate.py
sdk/python/moondb/: __init__.py  cache.py  client.py  graph.py  session.py  text.py  types.py  vector.py
sdk/python/moondb/integrations/: __init__.py  _hybrid_parse.py  langchain.py  llamaindex.py
sdk/python/tests/: conftest.py  test_client.py  test_example.py  test_hybrid.py  test_integrations.py  test_live_integration.py  test_text.py  test_vector.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: basic.rs  validate.rs  vector_search.rs
sdk/rust/src/: cache.rs  client.rs  error.rs  graph.rs  lib.rs  mq.rs  session.rs  temporal.rs  text.rs  types.rs  util.rs  vector.rs  workspace.rs
sdk/rust/tests/: integration.rs
src/: auth_ratelimit.rs  client_pause.rs  client_registry.rs  config.rs  error.rs  lib.rs  main.rs  tls.rs  version_token_tests.rs
tests/: admin_auth_cors_ratelimit.rs  adversarial_g1_g2.rs  adversarial_v0110_fix01_set_delete_rollback.rs  adversarial_v0110_fix02_err_path_intent.rs  adversarial_v0110_fix03_simplestring_graph.rs  adversarial_v0110_fix04_shortest_path_call_parity.rs  adversarial_v0110_fix06_shortest_path_min_hops.rs  adversarial_v0110_fix07_multihop_edge_var_reject.rs  allocator_mimalloc_smoke.rs  aof_fsync_err_subscribe_ordering.rs  aof_hash_ttl_red.rs  aof_toplevel_multishard_refusal.rs  autovacuum_daemon.rs  autovacuum_weighted.rs  blocking_list_timeout.rs  cmd_flush_dbsize_debug_memory.rs  cold_orphan_sweep.rs  console_gateway_test.rs  crash_matrix_per_shard_aof.rs  crash_matrix_per_shard_bgrewriteaof.rs  crash_recovery_disk_offload_no_aof.rs  crash_recovery_vacuum.rs  cross_shard_consistency_red.rs  durability_tests.rs  ft_search_as_of_boundary.rs  ft_search_as_of_filter.rs  ft_search_concurrent_readers.rs  ft_search_multi_shard_as_of.rs  ft_search_temporal_parity.rs  ft_search_yield_red.rs  ft_search_yield_red_api.rs  ft_yield_chunk_ab.rs  ft_yield_costfree.rs  fts_posting_rank_tf.rs  fts_query_eval_e2e.rs  fts_query_parse.rs  functions_fcall.rs  graph_bench_compare.rs  graph_bench_e2e.rs  graph_cypher_inline_filter.rs  (+71 more)
(+1098 files in other folders)
