[package]
name = "rust-redis"
version = "0.1.0"
edition = "2024"
description = "A high-performance Redis-compatible server written in Rust"
license = "MIT"
repository = "https://github.com/tindang/rust-redis"
keywords = ["redis", "database", "cache", "server"]
categories = ["database", "network-programming"]

[dependencies]
atoi = "2.0"
bumpalo = { version = "3.20", features = ["collections"] }
bytes = "1.10"
memchr = "2.8"
thiserror = "2.0"
mimalloc = { version = "0.1", default-features = false }
crossbeam-utils = "0.8"
flume = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "time", "fs"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
futures = "0.3"
ordered-float = "5"
rand = "0.9"
crc16 = "0.4"
crc32fast = "1"
parking_lot = "0.12"
itoa = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
ringbuf = "0.4"
core_affinity = "0.8"
once_cell = "1"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
sha1_smol = { version = "1.0", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
ctrlc = "3.4"

tikv-jemallocator = { version = "0.6", optional = true }
monoio = { version = "0.2", optional = true, features = ["sync"] }

[features]
default = ["runtime-tokio", "jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]
runtime-tokio = ["dep:tokio", "dep:tokio-util"]
runtime-monoio = ["dep:monoio"]

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"
nix = { version = "0.29", features = ["net", "socket"] }
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
redis = { version = "0.27", features = ["tokio-comp"] }
tempfile = "3"

[profile.release]
debug = false         # No debug symbols for smaller/faster binary
lto = "fat"           # Full cross-crate LTO for maximum inlining
codegen-units = 1     # Single codegen unit for global optimization
opt-level = 3         # Full optimization
strip = true          # Strip symbols

[[bench]]
name = "resp_parsing"
harness = false

[[bench]]
name = "entry_memory"
harness = false

[[bench]]
name = "bptree_memory"
harness = false

[[bench]]
name = "get_hotpath"
harness = false

[[bench]]
name = "compact_key"
harness = false
