[package]
name = "moon"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "A high-performance Redis-compatible server written in Rust"
license = "Apache-2.0"
repository = "https://github.com/pilotspace/moon"
keywords = ["redis", "database", "cache", "server"]
categories = ["database", "network-programming"]

[dependencies]
atoi = "2.0"
bumpalo = { version = "3.20", features = ["collections"] }
bytes = "1.10"
memchr = "2.8"
smallvec = { version = "1.15", features = ["union"] }
thiserror = "2.0"
mimalloc = { version = "0.1", default-features = false }
crc32c = "0.6"
crossbeam-utils = "0.8"
flume = "0.12"
atomic-waker = "1"
# Base features (rt, net) are always available for the admin HTTP server.
# runtime-tokio adds the full feature set (multi-thread, io-util, signal, etc.).
tokio = { version = "1", features = ["rt", "net", "macros"] }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
futures = "0.3"
ordered-float = "5"
phf = { version = "0.13", features = ["macros"] }
rand = "0.10"
crc16 = "0.4"
crc32fast = "1"
arc-swap = "1"
parking_lot = "0.12"
itoa = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
ringbuf = "0.4"
core_affinity = "0.8"
once_cell = "1"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
sha1_smol = { version = "1.0", features = ["std"] }
sha2 = "0.11"
hex = "0.4"
ctrlc = "3.4"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }
rustls-pemfile = { version = "2", optional = true }
aws-lc-rs = { version = "1", optional = true }
tokio-rustls = { version = "0.26", optional = true }
monoio-rustls = { version = "0.4", optional = true }
roaring = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = { version = "0.6", features = ["all"] }
memmap2 = "0.9"
lz4_flex = "0.13"
dashmap = "6"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server-auto"] }
http-body-util = "0.1"

tikv-jemallocator = { version = "0.6", optional = true }
monoio = { version = "0.2", optional = true, features = ["sync", "bytes"] }
cudarc = { version = "0.12", optional = true, default-features = false, features = ["cuda-version-from-build-system"] }
slotmap = "1"
boomphf = "0.6"
logos = { version = "0.16", optional = true }
hyper-tungstenite = { version = "0.19", optional = true }
rust-embed = { version = "8", features = ["compression"], optional = true }
mime_guess = { version = "2", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
base64 = { version = "0.22", optional = true }
hmac = { version = "0.13", optional = true }
subtle = { version = "2.5", optional = true }
unicode-segmentation = { version = "1.12", optional = true }
unicode-normalization = { version = "0.1", optional = true }
rust-stemmers = { version = "1.2", optional = true }

[features]
# Platform-aware defaults:
#   Linux/macOS: Monoio is default (io_uring / kqueue, thread-per-core)
#   Windows:     Tokio is default (IOCP, work-stealing fallback)
#
# Usage:
#   cargo build                                                    # Monoio on Linux/macOS
#   cargo build --no-default-features --features runtime-tokio,jemalloc   # force Tokio
#   cargo build --no-default-features --features runtime-monoio,jemalloc  # force Monoio
default = ["runtime-monoio", "jemalloc", "graph"]
jemalloc = ["dep:tikv-jemallocator"]
runtime-tokio = ["tokio/rt-multi-thread", "tokio/io-util", "tokio/signal", "tokio/time", "tokio/fs", "tokio/process", "dep:tokio-util", "dep:tokio-rustls", "dep:aws-lc-rs", "dep:rustls", "rustls/aws_lc_rs", "dep:rustls-pemfile"]
runtime-monoio = ["dep:monoio", "dep:monoio-rustls", "dep:aws-lc-rs", "dep:rustls", "rustls/aws_lc_rs", "dep:rustls-pemfile"]
gpu-cuda = ["dep:cudarc"]
simd-avx512 = []
# OpenTelemetry exporter: reserves feature namespace for OTLP trace export.
# When wired, will gate tracing-opentelemetry + opentelemetry-otlp dependencies.
otel = []
graph = ["dep:logos"]
console = ["dep:hyper-tungstenite", "dep:rust-embed", "dep:mime_guess", "dep:tokio-stream", "dep:base64", "dep:hmac", "dep:subtle", "hyper/http2"]
text-index = ["dep:unicode-segmentation", "dep:unicode-normalization", "dep:rust-stemmers"]

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"
nix = { version = "0.31", features = ["net", "socket"] }
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
redis = { version = "1.1", features = ["tokio-comp"] }
tempfile = "3"
loom = "0.7"
ureq = "2"
hmac = "0.13"

[profile.release]
debug = false         # No debug symbols for smaller/faster binary
lto = "fat"           # Full cross-crate LTO for maximum inlining
codegen-units = 1     # Single codegen unit for global optimization
opt-level = 3         # Full optimization
strip = true          # Strip symbols

[[bin]]
name = "moon-bench"
path = "src/bin/moon-bench.rs"

[[bench]]
name = "resp_parsing"
harness = false

[[bench]]
name = "entry_memory"
harness = false

[[bench]]
name = "bptree_memory"
harness = false

[[bench]]
name = "get_hotpath"
harness = false

[[bench]]
name = "compact_key"
harness = false

[[bench]]
name = "dispatch_baseline"
harness = false

[[bench]]
name = "distance_bench"
harness = false

[[bench]]
name = "hnsw_bench"
harness = false

[[bench]]
name = "fwht_bench"
harness = false

[[bench]]
name = "pubsub_hotpath"
harness = false

[[bench]]
name = "graph_bench"
harness = false
required-features = ["graph"]

[[bench]]
name = "graph_traversal"
harness = false
required-features = ["graph"]

[[bench]]
name = "simd_probe"
harness = false
