[package]
name = "moondb"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Rust client SDK for Moon — high-performance Redis-compatible server with vector search and graph engine"
license = "MIT"
repository = "https://github.com/pilotspace/moon"
keywords = ["redis", "vector-search", "graph", "database", "async"]
categories = ["database", "asynchronous", "network-programming"]

[dependencies]
redis = { version = "1.1", features = ["tokio-comp", "aio"] }
tokio = { version = "1", features = ["rt", "net", "macros"] }
thiserror = "2"
bytes = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.8", features = ["async_tokio"] }
tracing-subscriber = "0.3"

[features]
default = []
tls-rustls = ["redis/tls-rustls"]
tls-native-tls = ["redis/tls-native-tls"]

[[example]]
name = "basic"

[[example]]
name = "vector_search"

